--- a/config/redshift.conf
+++ b/config/redshift.conf
@@ -4,6 +4,8 @@ temp-night=3600
 gamma=0.8
 adjustment-method=randr
 location-provider=manual
+brightness-day = 0.9
+brightness-night = 0.7
 
 [manual]
 lat=-23
