--- a/config/termite/config
+++ b/config/termite/config
@@ -15,10 +15,6 @@ search_wrap = true
 #icon_name = terminal
 #geometry = 640x480
  
-# 0.0: opaque, 1.0: transparent
-transparency = 0.2
-pseudo_transparency = false
- 
 # "system", "on" or "off"
 cursor_blink = system
  
@@ -29,7 +25,7 @@ cursor_shape = underline
 foreground = #cccccc
 foreground_bold = #ffffff
 #foreground_dim = #888888
-background = #333333
+background = rgba(63, 63, 63, 0.8)
 cursor = #999999
 
 # vim: ft=dosini
