--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "i3blocks"]
 	path = i3blocks
 	url = https://github.com/vivien/i3blocks
+[submodule "vim"]
+	path = vim
+	url = https://github.com/thiagowfx/vim
