--- a/i3/config
+++ b/i3/config
@@ -100,7 +100,7 @@ bindsym $mod+b focus child
 
 # misc settings
 #
-# focus_follows_mouse no
+focus_follows_mouse no
 hide_edge_borders vertical
 workspace_auto_back_and_forth yes
 
