--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,7 @@ set $mod Mod4
 set $Alt Mod1
 set $I3lock i3lock-wrapper -l
 set $FileManager pcmanfm
+set $Quickswitch rofi -show window
 
 new_window pixel 2
 
@@ -41,11 +42,12 @@ bindsym $mod+Shift+q kill
 bindsym $Alt+F4      kill
 
 # start dmenu (a program launcher)
-bindsym $mod+Shift+d exec --no-startup-id dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show run -hlfg "#ffb964" -o 85
 
 # change focus
 bindsym $mod+j focus left
@@ -112,9 +114,9 @@ bindsym $mod+Shift+n workspace prev
 bindsym $mod+p workspace prev
 
 # quickswitch windows
-bindsym $mod+apostrophe exec --no-startup-id quickswitch.py
-bindsym $mod+Tab exec --no-startup-id quickswitch.py
-bindsym $Alt+Tab exec --no-startup-id quickswitch.py
+bindsym $mod+Tab exec --no-startup-id $Quickswitch
+bindsym $Alt+Tab exec --no-startup-id $Quickswitch
+bindsym $mod+x exec --no-startup-id $Quickswitch
 
 # named workspaces
 # 
