use as many threads  as possible to compile packages (https://www.reddit.com/r/archlinux/comments/3ctiou/lpt_speed_up_makepkg_by_skippingparallelizing/)
Former-commit-id: a7491724183d8b87b9a061588f88c29a68e5a1d0
Former-commit-id: 165f7fbde2a5a5db56113964d575b2bc62f81aa6
Former-commit-id: 1c172f497503ad130b51e3b84a81cc9f34976ceb

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -2,3 +2,4 @@ CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buf
 CXXFLAGS="$CFLAGS"
 MAKEFLAGS="-j$(nproc) -l$(nproc)"
 PACKAGER="Thiago Perrotta <perrotta.thiago@poli.ufrj.br>"
+COMPRESSXZ=(xz -T 0 -c -z -)
