--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,8 +1,8 @@
-music_directory	    	"~/Music"
-playlist_directory  	"~/.mpd/playlists"
-db_file		        	"~/.mpd/database"
-log_file	        	"~/.mpd/log"
-pid_file	        	"~/.mpd/pid"
-state_file              "~/.mpd/state"
-sticker_file		    "~/.mpd/sticker.sql"
-volume_normalization	"yes"
+music_directory	        "~/Music"
+playlist_directory      "~/.config/mpd/playlists"
+db_file	                "~/.config/mpd/database"
+log_file                "~/.config/mpd/log"
+pid_file                "~/.config/mpd/pid"
+state_file              "~/.config/mpd/state"
+sticker_file            "~/.config/mpd/sticker.sql"
+volume_normalization    "yes"
