--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -20,9 +20,9 @@ interval=once
 color=#ffff00
 signal=1
 
-[disk]
-command=$HOME/.i3blocks/scripts/disk
-interval=180
+#[disk]
+#command=$HOME/.i3blocks/scripts/disk
+#interval=180
 
 [netspeed]
 command=$HOME/.i3/netspeed
