--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,7 @@ set $Alt Mod1
 set $I3lock i3lock-wrapper -l
 set $FileManager pcmanfm
 set $Quickswitch rofi -show window
+set $I3status $HOME/.i3blocks/i3blocks
 
 new_window pixel 2
 
@@ -120,8 +121,8 @@ bindsym $mod+x exec --no-startup-id $Quickswitch
 
 # named workspaces
 # 
-set $W01 01:web
-set $W09 09:msg
+set $W01 1:web
+set $W09 9:msg
 set $W10 10:music ♪
 
 # switch to workspace
@@ -191,9 +192,10 @@ bindsym $mod+Shift+e mode "$mode_system"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command $HOME/.i3blocks/i3blocks
+        status_command $I3status
         position bottom
         mode dock
+        strip_workspace_numbers yes
 
         colors {
             statusline  #ECF0F1
