--- a/i3/config
+++ b/i3/config
@@ -16,8 +16,7 @@ set $I3lock i3lock-wrapper -l
 set $FileManager pcmanfm
 set $Quickswitch rofi -show window
 set $I3status $HOME/.i3blocks/i3blocks
-
-new_window pixel 2
+set $BorderSize 2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -104,8 +103,10 @@ bindsym $mod+b focus child
 # misc settings
 #
 focus_follows_mouse no
-hide_edge_borders vertical
+# hide_edge_borders vertical
 workspace_auto_back_and_forth yes
+new_float pixel $BorderSize
+new_window pixel $BorderSize
 
 # switch to next workspace
 bindsym $mod+n workspace next
