--- a/i3/config
+++ b/i3/config
@@ -45,8 +45,8 @@ bindsym $Alt+F4      kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+Shift+d exec --no-startup-id dmenu_run
+# bindsym $mod+Shift+d exec --no-startup-id dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+d exec --no-startup-id rofi -show run -hlfg "#ffb964" -o 85
 
 # change focus
