add osx to gitignore
Former-commit-id: 8bf9e1572c0ea1cc227cfa83fe427ce88fd60eb8
Former-commit-id: 0b6b17522d601f56e9f8058609f1f2ebf79c4cf2
Former-commit-id: 2f9484872714bcfacfe201e4311412003c85b81a
Former-commit-id: c30c99615a026087c82396c7a73d18d69cd2a2d9

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.gitignore.io
+# Created by https://www.gitignore.io/api/emacs,vim,osx
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -42,4 +42,31 @@ tramp
 Session.vim
 .netrwhist
 *~
+
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
