remove nproc from makepkg.conf
Former-commit-id: 8f9797d72b47b1b7b646331e27b494932852e02a
Former-commit-id: 16e54126d509794ee862b266e598188ccd79a199
Former-commit-id: 42efcd991069f010f73925dbf5825b2c7dd62b15
Former-commit-id: ae9085d5184f49d145bbe76b54bc64274fd2aa27

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -1,5 +1,5 @@
 CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="$CFLAGS"
-MAKEFLAGS="-j$(nproc) -l$(nproc)"
+MAKEFLAGS="-j"
 PACKAGER="Thiago Perrotta <perrotta.thiago@poli.ufrj.br>"
 COMPRESSXZ=(xz -T 0 -c -z -)
