--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,24 +1,32 @@
 set -g prefix C-b
 set -g prefix2 C-z
 set -g default-terminal "screen-256color"
-setw -g mode-mouse on
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set-option -g allow-rename off
+
 bind-key -n C-S-Up resize-pane -U 15
 bind-key -n C-S-Down resize-pane -D 15
 bind-key -n C-S-Left resize-pane -L 20
 bind-key -n C-S-Right resize-pane -R 20
+
 bind r source-file ~/.tmux.conf
-set-option -g allow-rename off
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
+# upstream:  https://bbs.archlinux.org/viewtopic.php?pid=1591711#p1591711
 
+## newer tmux
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+## older tmux
+# setw -g mode-mouse on
+# set -g mouse-select-window on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+
+# upstream ends
 
 # upstream: http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
-######################
-### DESIGN CHANGES ###
-######################
 
 # panes
 set -g pane-border-fg black
@@ -26,7 +34,7 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -38,7 +46,7 @@ set -g message-bg yellow
 set -g message-command-fg blue
 set -g message-command-bg black
 
-#window mode
+# window mode
 setw -g mode-bg colour6
 setw -g mode-fg colour0
 
@@ -60,8 +68,6 @@ setw -g window-status-attr reverse
 # set-option -g visual-silence off
 # set-window-option -g monitor-activity off
 # set-option -g bell-action none
-
-set -g default-terminal "screen-256color"
 
 # The modes {
 setw -g clock-mode-colour colour135
@@ -111,3 +117,5 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# upstream ends
