--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,114 +8,13 @@ bind-key -n C-S-Down resize-pane -D 15
 bind-key -n C-S-Left resize-pane -L 20
 bind-key -n C-S-Right resize-pane -R 20
 
-bind r source-file ~/.tmux.conf
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind r source-file ~/.tmux.conf
 
+# color theme
+source-file ~/.tmux.hamvocke.conf
+
+# add mouse support
 # upstream:  https://bbs.archlinux.org/viewtopic.php?pid=1591711#p1591711
-
-## newer tmux
-set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-## older tmux
-# setw -g mode-mouse on
-# set -g mouse-select-window on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-
-# upstream ends
-
-# upstream: http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
-
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
-## Status bar design
-# status line
-# set -g status-utf8 on
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-# window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-
-# loud or quiet?
-# set-option -g visual-activity off
-# set-option -g visual-bell off
-# set-option -g visual-silence off
-# set-window-option -g monitor-activity off
-# set-option -g bell-action none
-
-# The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-
-# }
-# The panes {
-
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
-
-# }
-# The statusbar {
-
-set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-attr dim
-set -g status-left '#S'
-set -g status-right '#[fg=colour233,bg=colour241,bold] %m/%d #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
-
-# }
-# The messages {
-
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
-
-# }
-
-# upstream ends
+source-file ~/.tmux.2.x.conf
+# source-file ~/.tmux.1.x.conf
