--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,20 +1,11 @@
 set -g prefix C-b
 set -g prefix2 C-z
-set -g default-terminal "screen-256color"
 set-option -g allow-rename off
-
-bind-key -n C-S-Up resize-pane -U 15
-bind-key -n C-S-Down resize-pane -D 15
-bind-key -n C-S-Left resize-pane -L 20
-bind-key -n C-S-Right resize-pane -R 20
 
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 bind r source-file ~/.tmux.conf
 
-# color theme
-source-file ~/.tmux.hamvocke.conf
+source-file ~/.tmux.theme.conf
 
-# add mouse support
-# upstream:  https://bbs.archlinux.org/viewtopic.php?pid=1591711#p1591711
 source-file ~/.tmux.2.x.conf
 # source-file ~/.tmux.1.x.conf
