--- a/tmux/.tmux.1.x.conf
+++ b/tmux/.tmux.1.x.conf
@@ -2,3 +2,4 @@ setw -g mode-mouse on
 set -g mouse-select-window on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
+set -g default-terminal "screen-256color"
