--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 set -g prefix C-b
 set -g prefix2 C-z
 set-option -g allow-rename off
+set -g history-limit 10000
 
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 bind r source-file ~/.tmux.conf
