--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,13 @@
 set -g prefix C-b
 set -g prefix2 C-z
-set-option -g allow-rename off
 set -g history-limit 10000
+set -g base-index 1
+set-option -g set-titles on
+set-window-option -g automatic-rename on
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
-bind r source-file ~/.tmux.conf
+# emacs-style copy to X clipboard
+bind-key -t emacs-copy C-w copy-pipe "xsel -i -p -b"
+bind-key -t emacs-copy M-w copy-pipe "xsel -i -p -b"
 
 source-file ~/.tmux.theme.conf
 
