--- a/_stuff/makepkg.conf
+++ b/_stuff/makepkg.conf
@@ -1,5 +1,5 @@
 CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="$CFLAGS"
 MAKEFLAGS="-j"
-PACKAGER="Thiago Perrotta <perrotta.thiago@poli.ufrj.br>"
+PACKAGER="Thiago Perrotta <tbperrotta@gmail.com>"
 COMPRESSXZ=(xz -T 0 -c -z -)
