--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,11 +14,12 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+# font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
+font pango:CamingoCode 9
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -170,7 +171,7 @@ bindsym $mod+Shift+e mode "$mode_system"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
         position bottom
         mode dock
         strip_workspace_numbers yes
@@ -212,4 +213,4 @@ client.unfocused        #3498DB #2C3E50 #ECF0F1 #2C3E50
 client.focused_inactive #3498DB #2C3E50 #ECF0F1 #2C3E50
 client.urgent           #3498DB #2C3E50 #ECF0F1 #2C3E50
 
-# font, status, color, netspeed
+# font, color
