--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -171,7 +171,7 @@ bindsym $mod+Shift+e mode "$mode_system"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks
+        status_command i3status
         position bottom
         mode dock
         strip_workspace_numbers yes
