--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ set -g history-limit 10000
 set -g base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
+set -g default-terminal "screen-256color"
 
 # emacs-style copy to X clipboard
 bind-key -t emacs-copy C-w copy-pipe "xsel -i -p -b"
