--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,5 +11,8 @@ bind-key -t emacs-copy M-w copy-pipe "xsel -i -p -b"
 
 source-file ~/.tmux.theme.conf
 
-source-file ~/.tmux.2.x.conf
-# source-file ~/.tmux.1.x.conf
+# tmux 2.x conf
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+set -g mouse on
+set -g default-terminal "tmux"
