--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,7 @@ default = simple
 d = diff --ignore-space-at-eol
 p = push
 st = status
-ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@ ;}; ignore"
 world = "!world() { git gc; git remote prune origin ;}; world"
 
 [core]
