--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by https://www.gitignore.io/api/emacs,vim,osx
+
+# Created by https://www.gitignore.io/api/vim,emacs,osx,git
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -33,24 +34,31 @@ tramp
 
 # cask packages
 .cask/
+dist/
 
+# Flycheck
+flycheck_*.el
 
-### Vim ###
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-*.un~
-Session.vim
-.netrwhist
-*~
+# server auth directory
+/server/
 
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+### Git ###
+*.orig
 
 ### OSX ###
-.DS_Store
+*.DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -62,6 +70,7 @@ Icon
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -70,3 +79,17 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### Vim ###
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+# auto-generated tag files
+tags
+
+# End of https://www.gitignore.io/api/vim,emacs,osx,git
