add more git goodies
Former-commit-id: eb6250980e70de74e97986bc2be075d3b47f1d69
Former-commit-id: abf9275d56cbeb711a857ecd3e4a71227dff31d8
Former-commit-id: 6ad235c4ad014ee26c89683598141a5040d8a16a
Former-commit-id: de34faf9d0005b9a11a3b5a99ba40d30a9448537
Former-commit-id: 5e15499d9636ae4974be02449d46f84ac5e89209 [formerly d8ac787281905d25b7f7b0536b43fbc26026dfe4]
Former-commit-id: 01cfa6906abe01e2cee6bd580693fc58f8f0a3c2

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,36 +1,45 @@
 [user]
-name = Thiago Perrotta
-email = tbperrotta@gmail.com
+	name = Thiago Perrotta
+	email = tbperrotta@gmail.com
 
 [credential]
-helper = store
+	helper = store
 
 [push]
-default = simple
+	default = simple
 
 [alias]
-d = diff --ignore-space-at-eol
-p = push
-st = status
-ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
-world = "!world() { git gc; git remote prune origin; }; world"
+	d = diff --ignore-space-at-eol
+	l = log
+	p = push
+	st = status
+	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
+	world = "!world() { git gc; git remote prune origin; }; world"
 
 [core]
-autocrlf = input
-editor = vim
+	autocrlf = input
+	editor = vim
+	excludesfile = ~/.gitignore_global
 
 [color]
-diff = auto
-status = auto
-branch = auto
-grep = auto
-interactive = auto
-showbranch = auto
-ui = auto
+	diff = auto
+	status = auto
+	branch = auto
+	grep = auto
+	interactive = auto
+	showbranch = auto
+	ui = auto
 
 [merge]
-tool = vimdiff
-conflictstyle = diff3
+	tool = vimdiff
+	conflictstyle = diff3
 
 [mergetool]
-prompt = false
+	prompt = true
+
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+
+[submodule]
+	fetchJobs = 0
