better git diff heuristics
Former-commit-id: 00cedd6ed07beca83a55ef166e1a8af29df8a622
Former-commit-id: 89df6d66df431f3b20bfafaa49cdb0e485fe2fe1
Former-commit-id: d4e625428d40879e54c75bd1efbb7a272934c452
Former-commit-id: 1fbf6ed1a2fac60d03619718b3a1fb483e7d8f64
Former-commit-id: a6eba92228966a55c05b06f7df28920e3e087cdf [formerly 8098401317c8996ee9d1cabebd3fd2e2c6222864]
Former-commit-id: f4a11aff352f4594241dd3c6955efab18ceefd05

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -42,4 +42,7 @@
 	trustExitCode = true
 
 [submodule]
-	fetchJobs = 0
+	fetchJobs = 0 # see https://github.com/blog/2188-git-2-9-has-been-released
+
+[diff]
+	compactionHeuristic = 1 # see https://github.com/blog/2188-git-2-9-has-been-released
