better git diff-highlight
Former-commit-id: 5a5fbe5957f6b1a76d66b8987d91a80eed65ee18
Former-commit-id: f6d679a0414d2ef720f898d118ebeaa20b152047
Former-commit-id: c81065d23aa48ed57b88908bc702e18423bb3d3d
Former-commit-id: ce9f69172dfe9f62182e3824b2e0d5172dc98962
Former-commit-id: d86d4d50191a7d21bb4dbbe3d4e4f2940b24120c [formerly 946ce5773939cfbe8d473d23ba4b94455c25574c]
Former-commit-id: d84e03df2e50c15dc709de6de9c76b858453b241

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -42,7 +42,15 @@
 	trustExitCode = true
 
 [submodule]
-	fetchJobs = 0 # see https://github.com/blog/2188-git-2-9-has-been-released
+	fetchJobs = 0
 
 [diff]
-	compactionHeuristic = 1 # see https://github.com/blog/2188-git-2-9-has-been-released
+	compactionHeuristic = 1
+
+[interactive]
+	diffFilter = diff-highlight
+
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
