--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,33 @@
+# prefix key {{{
 set -g prefix C-b
 set -g prefix2 C-z
+# }}}
+
+# history {{{
 set -g history-limit 100000
+# }}}
+
+# tweaks {{{
 set -g base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
-set -g default-terminal "screen-256color"
+# }}}
 
-# tmux 1.x conf
+# colors {{{
+set -g default-terminal "screen-256color"
+# }}}
+
+# tmux 1.x conf for mouse {{{
 # setw -g mode-mouse on
 # set -g mouse-select-window on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
+# }}}
 
-# tmux 2.x conf
+# tmux 2.x conf for mouse {{{
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 set -g mouse on
+# }}}
+
+# vim: fdm=marker
