Revert "remove diff-highlight"
This reverts commit 5be5f0f2f81bc00d35c7de8f4e0c310342d70019.


Former-commit-id: 72d40fe6e5df12ecefcd8fbcfec0e2c708768f45
Former-commit-id: f9830601ab5b495fb9c6ee5ad50b41511f3398b7
Former-commit-id: 2dc5be342f0e83b657e5117e55c6564bfeb03406
Former-commit-id: b17595e81be80bca6caa8e8ae1d17a93f1def514
Former-commit-id: 0e9e9b9bc4d366c1d52167d5ed4f7106e726720b [formerly 50af717885028edbe10d46368a48d6ed3faeca2a]
Former-commit-id: 61cd0bdda098197b123a06beb67e2f8fbad05dbd

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -46,3 +46,11 @@
 
 [diff]
 	compactionHeuristic = 1
+
+[interactive]
+	diffFilter = diff-highlight
+
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
