add zsh and submodules
Former-commit-id: 566775fbfe6bebc16f5ec3984b3c12874ebf91c5
Former-commit-id: b9bd5ad6c64cb16a6aebcccc2689663b51ce4a90
Former-commit-id: 895cc87f49216be1d0d80f0468870c9f36968e0c
Former-commit-id: 7c3a52ad870dcb34b7b1ca430433a5d7448e6912
Former-commit-id: 4dd9d74148ab997db5b2241dbef12b75c9ef5d63 [formerly 29adf71fc26fdbdfedc98f007843e16807150a35]
Former-commit-id: c1c34594c7252abaaf0b5fb790a0ea7881bc9fc6

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,18 @@
 	url = https://github.com/git/git
 	shallow = true
 [submodule "dwm/dwm"]
-	path = dwm/dwm
+	path = third-party/dwm
 	url = git://git.suckless.org/dwm
+	shallow = true
+[submodule "third-party/zsh-completions"]
+	path = third-party/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
+	shallow = true
+[submodule "third-party/zsh-syntax-highlighting"]
+	path = third-party/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
+	shallow = true
+[submodule "third-party/grml-etc-core"]
+	path = third-party/grml-etc-core
+	url = git://git.grml.org/grml-etc-core.git
 	shallow = true
