--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,8 @@ set-window-option -g automatic-rename on
 
 # colors {{{
 set -g default-terminal "screen-256color"
+set -g status-bg colour234
+set -g status-fg colour226
 # }}}
 
 # tmux 1.x conf for mouse {{{
