--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,7 @@ set -g history-limit 100000
 
 # tweaks {{{
 set -g base-index 1
+setw -g pane-base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
 # }}}
