--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,9 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
+
+# new windows/pane in $PWD
+bind c new-window -c "#{pane_current_path}"
 # }}}
 
 # colors {{{
