--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,8 +13,12 @@ setw -g pane-base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
 
-# new windows/pane in $PWD
+# new windows/pane in $PWD {{{
 bind c new-window -c "#{pane_current_path}"
+# }}}
+
+# macOS: pasteboard {{{
+if-shell 'test "$(uname -s)" = Darwin && command -v &>/dev/null reattach-to-user-namespace' 'set-option -g default-command "exec reattach-to-user-namespace"'
 # }}}
 
 # colors {{{
