only one tmux conf for mouse
Former-commit-id: 83117a4e45ebf20456822e14e06d727b739f9baa
Former-commit-id: 246a3893c98ac26026d863f43f2e1a24140d67a5
Former-commit-id: 2ebd12e7584cac9304fa007315b2688f41cc9fca
Former-commit-id: 52ada3e3bea99342dbc9d630af5787a35c5d4101
Former-commit-id: 22b54eda6e975c76d88c84fe283b9cccbce09b8a [formerly 156473be59e2983266f4d70a7f0d5a9f669f15fe]
Former-commit-id: 98b1eb2eaad91498cdc26a28f23d81f588cab91b

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,17 +28,12 @@ set -g status-bg colour234
 set -g status-fg colour226
 # }}}
 
-# tmux 1.x conf for mouse {{{
-# setw -g mode-mouse on
-# set -g mouse-select-window on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# }}}
+# tmux conf for mouse {{{
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
+    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
 
-# tmux 2.x conf for mouse {{{
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-set -g mouse on
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi" \
+    'set -g mouse on; bind -n WheelDownPane select-pane -t= \; send-keys -M;'
 # }}}
 
 # vim: fdm=marker
