mouse utf8 tmux
Former-commit-id: e72b0ca6c33a9316c01f75e881da8013eeffe9c7
Former-commit-id: b6d4ce1b31a0386199f3759d8098de78764d6bdf
Former-commit-id: b31c8c64905f1ec3739149be32810b9225a9519a
Former-commit-id: 203870803cce7a2f09ace39fa78410a1aa1549bd
Former-commit-id: ffbdd420a9b081b80b760a38b4e6633928000634 [formerly 8330e7bbaddfc3b00dcd6c10c820ad9b73a6a2b1]
Former-commit-id: 9fff3a073c5587f7a7e73455b0e63d839042b007

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi"
     'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
 
 if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi" \
-    'set -g mouse on; bind -n WheelDownPane select-pane -t= \; send-keys -M;'
+    'set -g mouse on; set -g mouse-utf8 on; bind -n WheelDownPane select-pane -t= \; send-keys -M;'
 # }}}
 
 # vim: fdm=marker
