--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -12,7 +12,7 @@ url="http://dwm.suckless.org"
 arch=('i686' 'x86_64')
 license=('MIT')
 options=(zipman)
-depends=('libx11' 'libxinerama' 'libxft' 'freetype2' 'dmenu' 'lxterminal' 'i3-wm' 'ttf-pt-fonts')
+depends=('libx11' 'libxinerama' 'libxft' 'freetype2' 'dmenu' 'i3-wm' 'ttf-pt-fonts')
 source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	config.h
 	dwm.desktop
