add dwm status bar
Former-commit-id: 6c98892e0b090102301884df89603ff34978fe2e
Former-commit-id: 269b5e31cce227ec67ced7c0b2752e4a2d35c0d4
Former-commit-id: 5dd093934bc22956b9c08e7039d06cd366511ce1
Former-commit-id: 9ab1648f75119133356428ac94d0787344d98eb0
Former-commit-id: 1e285185ac4015aec1de3872c542b8e29b194fe3 [formerly 23abe0c5dc0beef4b195721daada6926ce1344d0]
Former-commit-id: a2bd507a6edcc8d3143d4175b3063fcfa48e71ab

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = third-party/grml-etc-core
 	url = git://git.grml.org/grml-etc-core.git
 	shallow = true
+[submodule "third-party/dwm-statusbar"]
+	path = third-party/dwm-statusbar
+	url = https://github.com/snobb/dwm-statusbar
+	shallow = true
