add tmux plugin manager
Former-commit-id: b96819b750654250954bb0fb5e6c4be42ba28182
Former-commit-id: 75c749bc74cee185afb65d62c8e188fb7a5a8dca
Former-commit-id: 4f9ee88d330fc7b7115f4f12e8398ce622d8a8cf
Former-commit-id: b061fe5378f8061b713d537554f5ff5b945a8c14
Former-commit-id: 288f145330ef5c32485457ec4c675a57e84135b3 [formerly 2183d975fc86432585e388aad86e99959463f6ab]
Former-commit-id: 9b20220469116925e20b062f24f774278f7782ef

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = third-party/dwm-statusbar
 	url = https://github.com/snobb/dwm-statusbar
 	shallow = true
+[submodule "third-party/tpm"]
+	path = third-party/tpm
+	url = https://github.com/tmux-plugins/tpm
+	shallow = true
