--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,14 +18,14 @@ set-window-option -g automatic-rename on
 bind c new-window -c "#{pane_current_path}"
 # }}}
 
-# macOS: pasteboard {{{
-if-shell 'test "$(uname -s)" = Darwin && command -v &>/dev/null reattach-to-user-namespace' 'set-option -g default-command "exec reattach-to-user-namespace -l bash"'
-# }}}
-
 # colors {{{
 set -g default-terminal "screen-256color"
 set -g status-bg colour234
 set -g status-fg colour226
+# }}}
+
+# macOS: pasteboard {{{
+if-shell 'test "$(uname -s)" = Darwin && command -v &>/dev/null reattach-to-user-namespace' 'set-option -g default-command "exec reattach-to-user-namespace -l bash"'
 # }}}
 
 # tmux conf for mouse {{{
@@ -34,6 +34,16 @@ if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi"
 
 if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi" \
     'set -g mouse on; set -g mouse-utf8 on; bind -n WheelDownPane select-pane -t= \; send-keys -M;'
+# }}}
+
+# tmux plugin manager {{{
+# List of tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# <prefix> + I to install plug-ins
+run '~/.tmux/plugins/tpm/tpm'
 # }}}
 
 # vim: fdm=marker
