add a couple of plug-ins
Former-commit-id: 4823bbc0519bd32239a498f08b20f56454a6561f
Former-commit-id: f87d63f3a6088dba89f852b5275e8aadc1fa8b85
Former-commit-id: 6a885788f80201cef6dedde01f460387e43ce9de
Former-commit-id: 51ec897ac4a1bed05413872e133160bf94246e64
Former-commit-id: 194e7bdca5de57ae2b717f68e09e78bad95da257 [formerly 071aecadf7200bc1cdf12c09c2f7294601380568]
Former-commit-id: 53e5fa0f31665b839f6279e265f87800428b19fc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,10 +3,6 @@ set -g prefix C-b
 set -g prefix2 C-z
 # }}}
 
-# history {{{
-set -g history-limit 100000
-# }}}
-
 # tweaks {{{
 set -g base-index 1
 setw -g pane-base-index 1
@@ -24,10 +20,6 @@ set -g status-bg colour234
 set -g status-fg colour226
 # }}}
 
-# macOS: pasteboard {{{
-if-shell 'test "$(uname -s)" = Darwin && command -v &>/dev/null reattach-to-user-namespace' 'set-option -g default-command "exec reattach-to-user-namespace -l bash"'
-# }}}
-
 # tmux conf for mouse {{{
 if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
     'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
@@ -37,9 +29,14 @@ if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi"
 # }}}
 
 # tmux plugin manager {{{
+set -g @continuum-restore 'on'
+
 # List of tmux plugins
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'               # <prefix> + R (reload tmux conf), I (install plugins)
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control' # <prefix> + C-hjkl (movements)
+set -g @plugin 'tmux-plugins/tmux-resurrect'    # <prefix> + C-s or C-r (save/restore)
+set -g @plugin 'tmux-plugins/tmux-continuum'    # extension to tmux-resurrect (saves every 15min)
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # <prefix> + I to install plug-ins
