more tmux plugins
Former-commit-id: 4c60b2eabb1bd022f6249ed25607b95f0cb7f00a
Former-commit-id: 295b0f116c66fe806fefc6d5e9e1f0b6bd1ca350
Former-commit-id: 6234edaea875d489cf7a6b3c4f1706adbb1e9ac8
Former-commit-id: 7339102f0d4e80ab158a875f8720bafa9d2c3878
Former-commit-id: de5bed0747a0c6e0431e45f8aa21a69856d59eab [formerly 0f36a1f613fd7b91d37dfc7eb3d8524ed2b7be22]
Former-commit-id: 9c8ec7a1f835e93fc196905ac1b072c7bfe80e8e

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,14 +29,17 @@ if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi"
 # }}}
 
 # tmux plugin manager {{{
-set -g @continuum-restore 'on'
-
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'               # <prefix> + R (reload tmux conf), I (install plugins)
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control' # <prefix> + C-hjkl (movements)
 set -g @plugin 'tmux-plugins/tmux-resurrect'    # <prefix> + C-s or C-r (save/restore)
+
 set -g @plugin 'tmux-plugins/tmux-continuum'    # extension to tmux-resurrect (saves every 15min)
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-sidebar'      # <prefix> - <tab>
+set -g @sidebar-tree-position 'right'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # <prefix> + I to install plug-ins
