--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,6 +40,7 @@ set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tmux-sidebar'      # <prefix> - <tab>
 set -g @sidebar-tree-position 'right'
+set -g @sidebar-tree-command 'tree -C -L 2'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # <prefix> + I to install plug-ins
