--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,16 +8,20 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g set-titles on
 set-window-option -g automatic-rename on
-# }}}
 
-# new windows/pane in $PWD {{{
+# new windows/panes in $PWD
 bind c new-window -c "#{pane_current_path}"
 # }}}
 
-# colors {{{
+# colors and appearance {{{
 set -g default-terminal "screen-256color"
 set -g status-bg colour234
 set -g status-fg colour226
+
+# statusbar
+set -g status-interval 10
+set -g status-right-length 60
+set -g status-right '#[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R'
 # }}}
 
 # tmux conf for mouse {{{
