ignore orig files after merge
Former-commit-id: b8010190bd60163b172a47ddb31afa5dcadadb09
Former-commit-id: b5f7cb772dfb36692aa59281130c9b9d5718912e
Former-commit-id: 3f83dd512dbeefbe90761da4d6e176f4ada7b038
Former-commit-id: 263f8da8fb7fea24ec9da33254b1f994e8c4d7b0
Former-commit-id: d272818ab5e8637dcde663a091984471d5aab7fe [formerly 070e6a27a8d3f34be718dded846effe76eda739f]
Former-commit-id: d15a2ffa5647dc20b2facf0073abe98b47f6a37d

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -37,13 +37,11 @@
 
 [mergetool]
 	prompt = true
+	keepBackup = false
 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
-
-[submodule]
-	fetchJobs = 0
 
 [diff]
 	compactionHeuristic = 1
@@ -51,6 +49,9 @@
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
+
+[submodule]
+	fetchJobs = 0
 
 [interactive]
 	diffFilter = diff-highlight
