improve tmux docs
Former-commit-id: 959d71ad43d5139e9038ca0304f0e6146960318c
Former-commit-id: a38d995250f50f98f210fd0c432c46dfb68bb30b
Former-commit-id: 0b98c9d1794f063a3326fc35e19d3b4c6c418b8b
Former-commit-id: d7caa3a747d80ccda78499d4e89a411310161fd0
Former-commit-id: 3cbba021c7a7b7e3868b9327b2d0967e147da543 [formerly 655ae688e8ac7da3ff0c0ed5dee86f9645bb57d8]
Former-commit-id: d5d3b45557c000afd9127ab65b130128b709b9b6

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,12 +26,12 @@ set -g status-right '#[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %
 
 # tmux plugin manager {{{
 # List of tmux plugins
-set -g @plugin 'tmux-plugins/tpm'               # <prefix> + R (reload tmux conf), I (install plugins)
+set -g @plugin 'tmux-plugins/tpm'               # <prefix> + R (reload tmux conf), + I (install plugins)
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control' # <prefix> + C-hjkl (movements)
+set -g @plugin 'tmux-plugins/tmux-pain-control' # <prefix> + C-hjkl (move through panes) + HJKL (resize pane)
 set -g @plugin 'tmux-plugins/tmux-resurrect'    # <prefix> + C-s or C-r (save/restore)
 
-set -g @plugin 'tmux-plugins/tmux-sidebar'      # <prefix> - <tab>
+set -g @plugin 'tmux-plugins/tmux-sidebar'      # <prefix> + <tab>
 set -g @sidebar-tree-position 'right'
 set -g @sidebar-tree-command 'tree -C -L 2'
 
