--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,17 +31,18 @@ set -g status-fg colour226
 # statusbar
 set -g status-interval 10
 set -g status-right-length 60
-set -g status-right '#[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R'
+set -g status-right '#{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R'
 # }}}
 
 # tmux plugin manager {{{
 # List of tmux plugins
-set -g @plugin 'tmux-plugins/tpm'               # <prefix> + R (reload tmux conf), + I (install plugins)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control' # <prefix> + C-hjkl (move through panes) + HJKL (resize pane)
-set -g @plugin 'tmux-plugins/tmux-resurrect'    # <prefix> + C-s or C-r (save/restore)
 
-set -g @plugin 'tmux-plugins/tmux-sidebar'      # <prefix> + <tab>
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree-position 'right'
 set -g @sidebar-tree-command 'tree -C -L 2'
 
