--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,10 +4,12 @@ set -g prefix2 C-z
 # }}}
 
 # tweaks {{{
+set -g set-titles on
 set -g base-index 1
 setw -g pane-base-index 1
-set-option -g set-titles on
-set-window-option -g automatic-rename on
+setw -g automatic-rename on
+setw -g mode-keys emacs
+bind -t emacs-copy y copy-selection
 
 # new windows/panes in $PWD
 bind c new-window -c "#{pane_current_path}"
@@ -23,7 +25,7 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 # }}}
 
-# colors and appearance {{{
+# appearance, colors and statusbar {{{
 set -g default-terminal "screen-256color"
 set -g status-bg colour234
 set -g status-fg colour226
@@ -31,23 +33,22 @@ set -g status-fg colour226
 # statusbar
 set -g status-interval 10
 set -g status-right-length 60
-set -g status-right '#{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R'
+set -g status-right 'On-line: #{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R #{prefix_highlight}'
 # }}}
 
 # tmux plugin manager {{{
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-position 'right'
-set -g @sidebar-tree-command 'tree -C -L 2'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# <prefix> + I to install plug-ins
 run '~/.tmux/plugins/tpm/tpm'
 # }}}
 
