update world and update mr
Former-commit-id: e3be76941c20d0f1c6d283d0f3e2a0cfb2ead9c7
Former-commit-id: 7aa2890d1957026ed1350b84f6d7fbe22269fe27
Former-commit-id: 1c13c640544aa23618da19c343c4f61fdc4c5761
Former-commit-id: 6253f74e04ffd20a5ea5e7c18349b28a5856d71f
Former-commit-id: 0a5cf8981fad6871f82dcf3b25155b74e5f35431 [formerly fb5691993b877ee3b1b95f3a905adb8887d7a9dd]
Former-commit-id: 0223f3cf8df406536642c2ae5afee755c28be88f

--- a/mr/.mrconfig
+++ b/mr/.mrconfig
@@ -1,11 +1,11 @@
 [.vim]
 checkout = git clone --recursive --depth=1 'git@github.com:thiagowfx/vim' '.vim'
-update = git pull --recurse-submodules && git submodule update --recursive --remote
+update = git pull --depth=1 --recurse-submodules && git submodule update --depth=1 --recursive --remote
 
 [.emacs.d]
 checkout = git clone --recursive --depth=1 'git@github.com:thiagowfx/.emacs.d' '.emacs.d'
-update = git pull --recurse-submodules && git submodule update --recursive --remote
+update = git pull --depth=1 --recurse-submodules && git submodule update --depth=1 --recursive --remote
 
 [.dotfiles]
 checkout = git clone --recursive --depth=1 'git@github.com:thiagowfx/dotfiles' '.dotfiles'
-update = git pull --recurse-submodules && git submodule update --recursive --remote
+update = git pull --depth=1 --recurse-submodules && git submodule update --depth=1 --recursive --remote
