--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,12 +9,13 @@
 	default = simple
 
 [alias]
+	c = commit
 	d = diff --ignore-space-at-eol
-	dc = diff --cached
+	dc = diff --ignore-space-at-eol --cached
+	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
 	l = log
 	p = push
 	st = status
-	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
 	world = "!world() { git gc; git remote prune origin; }; world"
 
 [core]
