update tmux: add vim integration
Former-commit-id: 29f7b5c825c0d1808998c973ef4bbf78ea2207bb
Former-commit-id: 984ab120ffddc2acfaa5a6e0775600f0abc42ea1
Former-commit-id: 5672beb8d8d8ae975c89f83e9d4d5734737f9708
Former-commit-id: 7aa65a8a455c53633b983b4da78e10f67225af12
Former-commit-id: ae8e42442dd1008f1232d2eaa52969e9562eb1ad [formerly 8b1cfaa114b2438a82b843fcd851b3ac4b815522]
Former-commit-id: dbb6939359222b386087d195834926470584c8d3

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,8 @@ set -g status-right 'On-line: #{online_status} - #[fg=yellow]#(curl ipecho.net/p
 # tmux plugin manager {{{
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
